tests/variadic_arg_type_bad.stderr
tests/variadic_arg_type_bad.hop:7:9: error: HOP2068: variadic argument type mismatch
