tests/variadic_arg_type_bad.hop
// Verifies variadic argument type is rejected.
fn sum(nums ...i32) i32 {
	return 0
}

fn main() {
	sum(1, true)
}
